MINOR: Fold the Streams bootstrap resolution guard into the generic client config check
Follow-up to #23364. The bootstrap.resolve.timeout.ms guard was
implemented as a dedicated helper (enforceSynchronousBootstrapResolution)
next to the generic checkIfUnexpectedUserSpecifiedClientConfig mechanism
that Streams already uses to lock down client configs. Adding a new helper
for every locked-down config does not scale, so this change moves the
guard into the generic path:

- Introduce NON_CONFIGURABLE_CLIENT_CONFIGS and COMMON_CLIENT_OVERRIDES
  for configs that are locked down for every client Streams creates
  (consumers, producer, admin). The common overrides are merged into the
  consumer, producer, and admin client override maps via a small
  withCommonClientOverrides helper, so a future config only needs to be
  added to those two collections.
- checkIfUnexpectedUserSpecifiedClientConfig takes the client type as a
  parameter and gains a branch for the common overrides. getAdminConfigs
  now runs the check too, and getProducerConfigs checks the common
  configs in addition to the EOS ones.
- Compare user values with the Streams defaults by their String
  representation, so a typed value (e.g. Boolean false) no longer triggers
  a spurious warning against a String default (e.g. "false").
- Remove enforceSynchronousBootstrapResolution and its call sites.

Tests updated accordingly, plus a new test asserting that a user-supplied
value matching the Streams default is accepted silently.